[package]
name = "astray_core"
version = "0.1.16"
edition = "2021"
license = "MIT"
description = "Core functionality of the astray macro"
repository = "https://www.github.com/giluis/astray.git"
keywords  = ["abstract","syntax","tree","parser","recursive"]
categories = ["compilers", "parsing", "text-processing", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hatch_result = "0.1.7"
syn = "2.0.15"
quote = "1.0.23"
proc-macro2 = "1.0.51"
either = "1.8.1"
arr_macro = "0.2.1"
