[package]
name = "astray_core"
version = "0.1.18"
edition = "2021"
license = "MIT"
description = "Core functionality of the astray macro"
repository = "https://www.github.com/giluis/astray.git"
keywords  = ["abstract","syntax","tree","parser","recursive"]
categories = ["compilers", "parsing", "text-processing", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.0"
hatch_result = "0.1.7"
